--- a/libs/api/tsconfig.lib.json
+++ b/libs/api/tsconfig.lib.json
@@ -4,10 +4,7 @@
     "outDir": "../../dist/out-tsc",
     "declaration": true,
     "types": [],
-    "target": "es6",
-    "paths": {
-      "@weplanx/common": ["dist/lib/common"]
-    }
+    "target": "es6"
   },
   "include": ["**/*.ts"],
   "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts"]
