--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "@angular/platform-browser": "~14.2.0",
     "@angular/platform-browser-dynamic": "~14.2.0",
     "@angular/router": "~14.2.0",
+    "@angular/service-worker": "^14.2.0",
     "@antv/g2plot": "^2.4.20",
+    "@antv/x6": "^1.34.0",
     "@fastify/cookie": "^8.1.0",
     "@fastify/helmet": "^10.0.0",
     "@nestjs/common": "^9.0.0",
@@ -34,7 +36,9 @@
     "argon2": "^0.29.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
+    "date-fns": "^2.29.2",
     "ioredis": "^5.2.3",
+    "monaco-editor": "^0.34.0",
     "mongodb": "^4.9.1",
     "nats": "^2.7.1",
     "ng-zorro-antd": "^14.0.0",
