--- a/libs/api/project.json
+++ b/libs/api/project.json
@@ -5,13 +5,17 @@
   "targets": {
     "build": {
       "executor": "@nrwl/js:tsc",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/libs/api",
         "tsConfig": "libs/api/tsconfig.lib.json",
         "packageJson": "libs/api/package.json",
         "main": "libs/api/src/index.ts",
-        "assets": ["libs/api/*.md"]
+        "assets": [
+          "libs/api/*.md"
+        ]
       }
     },
     "publish": {
@@ -28,14 +32,20 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["libs/api/**/*.ts"]
+        "lintFilePatterns": [
+          "libs/api/**/*.ts"
+        ]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/api"],
+      "outputs": [
+        "coverage/libs/api"
+      ],
       "options": {
         "jestConfig": "libs/api/jest.config.ts",
         "passWithNoTests": true
