--- a/package.json
+++ b/package.json
@@ -3,8 +3,6 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "ng": "nx",
-    "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
     "start": "nx run-many --target=serve",
     "build": "nx build",
     "test": "nx test"
@@ -18,6 +16,7 @@
     "@angular/forms": "~14.2.0",
     "@angular/platform-browser": "~14.2.0",
     "@angular/platform-browser-dynamic": "~14.2.0",
+    "@angular/pwa": "^14.2.1",
     "@angular/router": "~14.2.0",
     "@angular/service-worker": "^14.2.0",
     "@antv/g2plot": "^2.4.20",
@@ -42,6 +41,7 @@
     "mongodb": "^4.9.1",
     "nats": "^2.7.1",
     "ng-zorro-antd": "^14.0.0",
+    "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~7.5.0",
