--- a/angular.json
+++ b/angular.json
@@ -3,10 +3,8 @@
   "version": 2,
   "projects": {
     "angular": "libs/angular",
-    "api": "libs/api",
     "common": "libs/common",
     "console": "apps/console",
-    "integrate": "libs/integrate",
-    "server": "apps/server"
+    "integrate": "libs/integrate"
   }
 }
