--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "name": "weplanx",
-  "version": "0.0.0",
-  "license": "MIT",
+  "description": "基于 Antd 集成的 Angular 组件库，低代码前端的实验项目",
+  "version": "0.0.0-NOT-USED",
   "scripts": {
     "start": "nx run-many --target=serve",
     "build": "nx build",
+    "build:ng": "nx build angular",
+    "build:intgr": "nz build integrate",
     "test": "nx test"
   },
-  "private": true,
   "dependencies": {
+    "@angular-eslint/schematics": "^14.0.4",
     "@angular/animations": "~14.2.0",
     "@angular/common": "~14.2.0",
     "@angular/compiler": "~14.2.0",
@@ -31,7 +33,7 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-fastify": "^9.0.11",
     "@ngx-pwa/local-storage": "^13.0.5",
-    "@nrwl/angular": "14.6.4",
+    "@nrwl/angular": "14.6.5",
     "argon2": "^0.29.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
@@ -59,15 +61,15 @@
     "@angular/language-service": "~14.2.0",
     "@nestjs/schematics": "^9.0.0",
     "@nestjs/testing": "^9.0.0",
-    "@nrwl/cli": "14.6.4",
-    "@nrwl/cypress": "14.6.4",
-    "@nrwl/eslint-plugin-nx": "14.6.4",
-    "@nrwl/jest": "14.6.4",
-    "@nrwl/linter": "14.6.4",
-    "@nrwl/nest": "14.6.4",
-    "@nrwl/node": "14.6.4",
-    "@nrwl/nx-cloud": "latest",
-    "@nrwl/workspace": "14.6.4",
+    "@nrwl/cli": "14.6.5",
+    "@nrwl/cypress": "14.6.5",
+    "@nrwl/eslint-plugin-nx": "14.6.5",
+    "@nrwl/jest": "14.6.5",
+    "@nrwl/linter": "14.6.5",
+    "@nrwl/nest": "14.6.5",
+    "@nrwl/node": "14.6.5",
+    "@nrwl/nx-cloud": "14.6.2",
+    "@nrwl/workspace": "14.6.5",
     "@types/jest": "28.1.1",
     "@types/node": "16.11.7",
     "@types/passport-jwt": "^3.0.6",
@@ -83,7 +85,7 @@
     "jest-environment-jsdom": "28.1.1",
     "jest-preset-angular": "~12.2.0",
     "ng-packagr": "~14.2.0",
-    "nx": "14.6.4",
+    "nx": "14.6.5",
     "postcss": "^8.4.5",
     "postcss-import": "~14.1.0",
     "postcss-preset-env": "~7.5.0",
