--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@antv/g2plot": "^2.4.17",
     "@antv/x6": "^1.32.3",
     "@ngx-pwa/local-storage": "^13.0.5",
+    "d3-color": "^3.1.0",
     "date-fns": "^2.28.0",
     "monaco-editor": "^0.31.1",
     "ng-zorro-antd": "^14.0.0",
