--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
     "@angular/service-worker": "^14.0.0",
-    "date-fns": "^2.28.0",
     "monaco-editor": "^0.31.1",
+    "nanoid": "^4.0.0",
     "ng-zorro-antd": "^14.0.0",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
