--- a/angular.json
+++ b/angular.json
@@ -26,15 +26,7 @@
             "assets": ["src/favicon.ico", "src/assets", "src/manifest.webmanifest"],
             "styles": ["src/styles.scss"],
             "scripts": [],
-            "allowedCommonJsDependencies": [
-              "size-sensor",
-              "pdfast",
-              "validator",
-              "d3-regression",
-              "fmin",
-              "mousetrap",
-              "jquery"
-            ],
+            "allowedCommonJsDependencies": ["validator", "size-sensor", "d3-regression", "fmin", "pdfast"],
             "serviceWorker": true,
             "ngswConfigPath": "ngsw-config.json"
           },
@@ -102,7 +94,7 @@
             "karmaConfig": "karma.conf.js",
             "inlineStyleLanguage": "scss",
             "assets": ["src/favicon.ico", "src/assets", "src/manifest.webmanifest"],
-            "styles": ["./node_modules/ng-zorro-antd/ng-zorro-antd.min.css", "src/styles.scss"],
+            "styles": ["src/styles.scss"],
             "scripts": []
           }
         },
