--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "^14.2.8",
     "@angular/router": "^14.2.8",
     "@angular/service-worker": "^14.2.8",
+    "@antv/g2plot": "^2.4.20",
     "monaco-editor": "^0.31.1",
     "nanoid": "^4.0.0",
     "ng-zorro-antd": "^14.1.1",
