--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@angular/cli": "~14.2.7",
     "@angular/compiler-cli": "^14.2.8",
     "@types/jasmine": "~4.0.0",
+    "@types/pouchdb": "^6.4.0",
     "@types/validator": "^13.7.6",
     "@typescript-eslint/eslint-plugin": "5.29.0",
     "@typescript-eslint/parser": "5.29.0",
