--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "@angular/cli": "~14.2.7",
     "@angular/compiler-cli": "^14.2.8",
     "@types/jasmine": "~4.0.0",
-    "@types/pouchdb": "^6.4.0",
     "@types/validator": "^13.7.6",
     "@typescript-eslint/eslint-plugin": "5.29.0",
     "@typescript-eslint/parser": "5.29.0",
@@ -55,6 +54,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.0.0",
+    "localforage": "^1.10.0",
     "ng-packagr": "^14.2.0",
     "prettier": "*",
     "typescript": "~4.7.2"
