--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,10 +16,9 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "es2020",
-    "module": "es2020",
-    "lib": ["es2020", "dom"],
-    "skipLibCheck": true,
+    "target": "ES2022",
+    "module": "ES2022",
+    "lib": ["ES2022", "dom"],
     "paths": {
       "@env": ["src/environments/environment.ts"],
       "@app": ["src/app/app.service.ts"],
