UPDATE: Dev Server Proxy & http intercept

--- a/angular.json
+++ b/angular.json
@@ -75,7 +75,8 @@
           },
           "options": {
             "host": "0.0.0.0",
-            "disableHostCheck": true
+            "disableHostCheck": true,
+            "proxyConfig": "src/proxy.conf.json"
           },
           "defaultConfiguration": "development"
         },
