--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "version": "0.0.0-NOT-USED",
   "scripts": {
     "start": "ng s",
+    "start:proxy": "ng s --proxy-config src/proxy.conf.json",
     "build": "ng b --configuration production",
     "build:ng": "ng b angular --configuration production",
     "test": "ng t angular --code-coverage --no-watch --no-progress --browsers=ChromeHeadlessCI",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev:ssr": "ng run console:serve-ssr",
+    "serve:ssr": "node dist/console/server/main.js",
+    "build:ssr": "npm run build && ng run console:server",
+    "prerender": "ng run console:prerender"
   },
   "dependencies": {
     "@angular/animations": "^15.0.4",
@@ -19,10 +24,13 @@
     "@angular/forms": "^15.0.4",
     "@angular/platform-browser": "^15.0.4",
     "@angular/platform-browser-dynamic": "^15.0.4",
+    "@angular/platform-server": "^15.0.4",
     "@angular/router": "^15.0.4",
     "@angular/service-worker": "^15.0.4",
     "@antv/g2plot": "^2.4.20",
+    "@nguniversal/express-engine": "^15.0.0",
     "d3-color": "^3.1.0",
+    "express": "^4.15.2",
     "monaco-editor": "^0.31.1",
     "nanoid": "^4.0.0",
     "ng-zorro-antd": "^15.0.0",
@@ -40,7 +48,10 @@
     "@angular-eslint/template-parser": "15.1.0",
     "@angular/cli": "~15.0.4",
     "@angular/compiler-cli": "^15.0.4",
+    "@nguniversal/builders": "^15.0.0",
+    "@types/express": "^4.17.0",
     "@types/jasmine": "~4.0.0",
+    "@types/node": "^14.15.0",
     "@types/validator": "^13.7.6",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
