--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "localforage": "^1.10.0",
     "ng-packagr": "^15.0.3",
     "prettier": "*",
-    "typescript": "~4.8.4"
+    "typescript": "~4.8.4",
+    "d3-color": ">=3.1.0"
   }
 }
