--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "prerender": "ng run console:prerender",
     "test": "ng t angular --code-coverage --no-watch --no-progress --browsers=ChromeHeadlessCI",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "i18n": "ng extract-i18n --output-path src/locale"
   },
   "dependencies": {
     "@angular/animations": "^15.0.4",
@@ -47,6 +48,7 @@
     "@angular-eslint/template-parser": "15.1.0",
     "@angular/cli": "~15.0.4",
     "@angular/compiler-cli": "^15.0.4",
+    "@angular/localize": "^15.0.4",
     "@nguniversal/builders": "^15.0.0",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~4.0.0",
@@ -54,6 +56,7 @@
     "@types/validator": "^13.7.6",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
+    "d3-color": ">=3.1.0",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
@@ -67,7 +70,6 @@
     "localforage": "^1.10.0",
     "ng-packagr": "^15.0.3",
     "prettier": "*",
-    "typescript": "~4.8.4",
-    "d3-color": ">=3.1.0"
+    "typescript": "~4.8.4"
   }
 }
