Update: publish npm

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -30,6 +30,6 @@ jobs:
         env:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
         run: |
-          cd ./dist/angular
+          cd ./dist/library
           npm version ${{github.ref_name}}
           npm publish --access=public
