--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,5 +31,5 @@ jobs:
           NODE_AUTH_TOKEN: ${{secrets.NPM_TOKEN}}
         run: |
           cd ./dist/library
-          npm version ${{github.ref_name#v}}
+          npm version v${{github.ref_name#ng-}}
           npm publish --access=public
