--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/validator": "^13.7.6",
     "@typescript-eslint/eslint-plugin": "^5.43.0",
     "@typescript-eslint/parser": "^5.43.0",
+    "cropperjs": "^1.5.13",
     "d3-color": ">=3.1.0",
     "eslint": "^8.28.0",
     "eslint-config-prettier": "^8.5.0",
