update: change the default port

--- a/angular.json
+++ b/angular.json
@@ -83,6 +83,7 @@
           },
           "options": {
             "host": "0.0.0.0",
+            "port": 4201,
             "disableHostCheck": true
           },
           "defaultConfiguration": "development"
