--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@angular/compiler-cli": "^15.2.5",
     "@angular/localize": "^15.2.5",
     "@nguniversal/builders": "^15.2.0",
+    "@ngx-formly/schematics": "^6.1.3",
     "@types/express": "^4.17.0",
     "@types/jasmine": "~4.0.0",
     "@types/node": "^14.15.0",
