--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,11 +25,11 @@
       "@common/*": ["src/app/common/*"],
       "@orgs/*": ["src/app/namespace/orgs/*"],
       "@weplanx/ng": ["library/public-api.ts"],
-      "@weplanx/block": ["library/block/public-api.ts"],
+      "@weplanx/ng/block": ["library/block/public-api.ts"],
       "@weplanx/ng/checkbox": ["library/checkbox/public-api.ts"],
       "@weplanx/ng/upload": ["library/upload/public-api.ts"],
       "@weplanx/ng/media": ["library/media/public-api.ts"],
-      "@weplanx/ng/tags": ["library/tags/public-api.ts"],
+      "@weplanx/ng/quick": ["library/quick/public-api.ts"],
       "@weplanx/ng/table": ["library/table/public-api.ts"],
       "@weplanx/ng/form": ["library/form/public-api.ts"],
       "@weplanx/ng/richtext": ["library/richtext/public-api.ts"],
