--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,18 @@
-# compiled output
+# See http://help.github.com/ignore-files/ for more about ignoring files.
+
+# Compiled output
 /dist
+/tmp
+/out-tsc
+/bazel-out
+
+# Node
 /node_modules
-
-# Logs
-logs
-*.log
-npm-debug.log*
-pnpm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-
-# OS
-.DS_Store
-
-# Tests
-/coverage
-/.nyc_output
+npm-debug.log
+yarn-error.log
 
 # IDEs and editors
-/.idea
+.idea/
 .project
 .classpath
 .c9/
@@ -27,13 +20,23 @@ lerna-debug.log*
 .settings/
 *.sublime-workspace
 
-# IDE - VSCode
+# Visual Studio Code
 .vscode/*
 !.vscode/settings.json
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+.history/*
 
-.angular
-deployment.yml
+# Miscellaneous
+/.angular/cache
+.sass-cache/
+/connect.lock
+/coverage
+/libpeerconnection.log
+testem.log
+/typings
 
+# System files
+.DS_Store
+Thumbs.db
