--- a/packages/console/project.json
+++ b/packages/console/project.json
@@ -8,15 +8,24 @@
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/packages/console",
         "index": "packages/console/src/index.html",
         "main": "packages/console/src/main.ts",
-        "polyfills": ["zone.js"],
+        "polyfills": [
+          "zone.js"
+        ],
         "tsConfig": "packages/console/tsconfig.app.json",
-        "assets": ["packages/console/src/favicon.ico", "packages/console/src/assets"],
-        "styles": ["packages/console/src/styles.scss"],
+        "assets": [
+          "packages/console/src/favicon.ico",
+          "packages/console/src/assets"
+        ],
+        "styles": [
+          "packages/console/src/styles.scss"
+        ],
         "scripts": []
       },
       "configurations": {
@@ -41,7 +50,13 @@
           "vendorChunk": true,
           "extractLicenses": false,
           "sourceMap": true,
-          "namedChunks": true
+          "namedChunks": true,
+          "fileReplacements": [
+            {
+              "replace": "packages/console/src/environments/environment.ts",
+              "with": "packages/console/src/environments/environment.development.ts"
+            }
+          ]
         }
       },
       "defaultConfiguration": "production"
@@ -69,14 +84,21 @@
     },
     "lint": {
       "executor": "@nx/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["packages/console/**/*.ts", "packages/console/**/*.html"]
+        "lintFilePatterns": [
+          "packages/console/**/*.ts",
+          "packages/console/**/*.html"
+        ]
       }
     },
     "test": {
       "executor": "@nx/jest:jest",
-      "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
+      "outputs": [
+        "{workspaceRoot}/coverage/{projectRoot}"
+      ],
       "options": {
         "jestConfig": "packages/console/jest.config.ts",
         "passWithNoTests": true
