--- a/package.json
+++ b/package.json
@@ -2,22 +2,24 @@
   "name": "weplanx",
   "version": "0.0.0-NOT-USED",
   "scripts": {
-    "start": "nx run-many --target=serve"
+    "start": "nx run-many --target=serve",
+    "migrate": "npx prisma migrate dev --name init"
   },
   "private": false,
   "dependencies": {
-    "@angular/animations": "~16.1.0",
-    "@angular/common": "~16.1.0",
-    "@angular/compiler": "~16.1.0",
-    "@angular/core": "~16.1.0",
-    "@angular/forms": "~16.1.0",
-    "@angular/localize": "^16.1.2",
-    "@angular/platform-browser": "~16.1.0",
-    "@angular/platform-browser-dynamic": "~16.1.0",
-    "@angular/router": "~16.1.0",
+    "@angular/animations": "~16.0.0",
+    "@angular/common": "~16.0.0",
+    "@angular/compiler": "~16.0.0",
+    "@angular/core": "~16.0.0",
+    "@angular/forms": "~16.0.0",
+    "@angular/localize": "~16.0.0",
+    "@angular/platform-browser": "~16.0.0",
+    "@angular/platform-browser-dynamic": "~16.0.0",
+    "@angular/router": "~16.0.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@prisma/client": "^4.16.0",
     "axios": "^1.0.0",
     "ng-zorro-antd": "^16.0.0",
     "reflect-metadata": "^0.1.13",
@@ -26,15 +28,15 @@
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~16.1.0",
-    "@angular-devkit/core": "~16.1.0",
-    "@angular-devkit/schematics": "~16.1.0",
+    "@angular-devkit/build-angular": "~16.0.0",
+    "@angular-devkit/core": "~16.0.0",
+    "@angular-devkit/schematics": "~16.0.0",
     "@angular-eslint/eslint-plugin": "~16.0.0",
     "@angular-eslint/eslint-plugin-template": "~16.0.0",
     "@angular-eslint/template-parser": "~16.0.0",
-    "@angular/cli": "~16.1.0",
-    "@angular/compiler-cli": "^16.0.0",
-    "@angular/language-service": "^16.0.0",
+    "@angular/cli": "~16.0.0",
+    "@angular/compiler-cli": "~16.0.0",
+    "@angular/language-service": "~16.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
     "@nx/angular": "16.3.2",
@@ -47,7 +49,7 @@
     "@nx/node": "16.3.2",
     "@nx/web": "16.3.2",
     "@nx/webpack": "16.3.2",
-    "@schematics/angular": "~16.1.0",
+    "@schematics/angular": "~16.0.0",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
@@ -65,6 +67,8 @@
     "nx": "16.3.2",
     "nx-cloud": "16.0.5",
     "prettier": "^2.6.2",
+    "prettier-plugin-prisma": "^4.13.0",
+    "prisma": "^4.16.0",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
     "typescript": "~5.0.2"
