--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,10 @@
 {
   "name": "server",
-  "version": "0.0.1",
-  "description": "",
-  "author": "",
-  "private": true,
-  "license": "UNLICENSED",
   "scripts": {
+    "start": "nest start --watch",
     "build": "nest build",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node dist/main",
-    "migrate": "npx prisma migrate dev --name init"
+    "build:utils": "nest build utils",
+    "migrate": "npx prisma migrate dev"
   },
   "dependencies": {
     "@fastify/cookie": "^8.3.0",
@@ -25,7 +19,7 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "fastify": "^4.18.0",
-    "nanoid": "^4.0.2",
+    "redis": "^4.6.7",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
   },
@@ -55,7 +49,7 @@
       "json",
       "ts"
     ],
-    "rootDir": "src",
+    "rootDir": ".",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
@@ -63,7 +57,14 @@
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
-    "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "coverageDirectory": "./coverage",
+    "testEnvironment": "node",
+    "roots": [
+      "<rootDir>/src/",
+      "<rootDir>/utils/"
+    ],
+    "moduleNameMapper": {
+      "^@weplanx/utils(|/.*)$": "<rootDir>/utils/src/$1"
+    }
   }
 }
