--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -16,6 +16,10 @@
     "noImplicitAny": false,
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
-    "noFallthroughCasesInSwitch": false
+    "noFallthroughCasesInSwitch": false,
+    "paths": {
+      "@weplanx/utils": ["utils/src"],
+      "@weplanx/utils/*": ["utils/src/*"]
+    }
   }
 }
