--- a/console/package.json
+++ b/console/package.json
@@ -27,6 +27,7 @@
     "ng-zorro-antd": "^16.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
+    "weplanx": "file:..",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
