--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "passport-jwt": "^4.0.1",
     "redis": "^4.6.7",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "weplanx": "file:.."
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
