--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "console",
-  "version": "0.0.0",
+  "version": "0.0.0-NOT-USED",
   "scripts": {
-    "start": "ng serve"
+    "start": "ng s"
   },
   "private": true,
   "dependencies": {
