--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,7 +24,8 @@
       "@env": ["src/environments/environment.ts"],
       "@app": ["src/app/app.service.ts"],
       "@common/*": ["src/common/*"],
-      "@weplanx/ng": ["library/public-api.ts"]
+      "@weplanx/ng": ["library/public-api.ts"],
+      "@weplanx/ng/table": ["library/table/public-api.ts"]
     }
   },
   "angularCompilerOptions": {
